--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -80,11 +80,13 @@ a {
 
 @media screen and (max-width: 700px) {
     .header {
-        font-size: 0.7em;
+        font-size: 0.9em;
 
         nav {
             transform: translate(0);
             padding: 3px 10px;
+            justify-content: space-around;
+            width: 85%;
         }
         p:first-of-type {
             font-size: 0.9em;
